tests/verbatim_scanner/errors/false_start_then_paragraph.txxt
Expected: []
false start title:
    some content
    but no terminator

This is just a regular paragraph.
More text here.